# enveror-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-publish.yml  rust-ci.yml  rust.yml
src/: enveror.rs  error.rs  into_json.rs  lib.rs  line_parser.rs  loader.rs  main.rs  tree.rs
src/loader/: line_parser.rs  mod.rs
src/tree/: mod.rs  node.rs  node_branch.rs  route.rs
src/tree/string_into_json/: mod.rs  modifier.rs  type_checker.rs
src/value/: mod.rs  string_checker.rs  validator.rs  value_parser.rs  vec_parser.rs
tests/: case_enveror  case_enveror.rs  case_enveror_comment  case_enveror_comment.rs  case_enveror_empty_line  case_enveror_empty_line.rs  case_enveror_local  case_enveror_local.rs  case_enveror_osenv.rs  case_enveror_spec  case_enveror_spec.rs  case_enveror_spec_lf  case_enveror_spec_lf.rs
