[package]
name = "enveror"
version = "0.1.1"
edition = "2021"
authors = ["ysuzuki19"]
repository = "https://github.com/ysuzuki19/enveror-rs"
license = "MIT"
license-file = "LICENSE"
description = "A library to load environment variables into structs."

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
typed-builder = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
